--- a/modules/core/client/less/adManager.less
+++ b/modules/core/client/less/adManager.less
@@ -35,6 +35,10 @@
       color: white;
       position:relative ;
 
+      p {
+        text-overflow: ellipsis;
+        overflow: hidden;
+      }
       .action {
         display: inline;
         opacity: 0;
